feat: Creates user activation flow
